RESOLVED FIXED301327
REGRESSION(301753@main): IndexedDB database cannot be opened after name upgrade
https://bugs.webkit.org/show_bug.cgi?id=301327
Summary REGRESSION(301753@main): IndexedDB database cannot be opened after name upgrade
Sihui Liu
Reported 2025-10-22 23:51:11 PDT
...
Attachments
Sihui Liu
Comment 1 2025-10-22 23:51:29 PDT
Sihui Liu
Comment 2 2025-10-22 23:59:08 PDT
EWS
Comment 3 2025-10-23 13:36:05 PDT
Committed 302055@main (c3cb68d16a4d): <https://commits.webkit.org/302055@main> Reviewed commits have been landed. Closing PR #52860 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.