REGRESSION(301753@main): IndexedDB database cannot be opened after name upgrade https://bugs.webkit.org/show_bug.cgi?id=301327 rdar://163219457

Reviewed by Per Arne Vollan.

The current implementation does not correctly upgrade database name in database due to a wrong condition check --
migrateIDBDatabaseInfoTableIfNecessary already performs database name equality check at L710, so it should not check
again and skip record update at L725. Otherwise, the database might end up having mismatched metadata versions and
database name format.

New test: IndexedDB.OpenDatabaseAfterDatabaseNameUpgrade

* Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::migrateIDBDatabaseInfoTableIfNecessary):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/IndexedDBFileName.mm:
(TEST(IndexedDB, OpenDatabaseAfterDatabaseNameUpgrade)):

Canonical link: https://commits.webkit.org/302055@main